[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="StatsPanel" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 180.0

[node name="HealthContainer" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="HealthIcon" type="Label" parent="StatsPanel/HealthContainer"]
layout_mode = 2
text = "‚ù§"

[node name="HealthBar" type="ProgressBar" parent="StatsPanel/HealthContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="StatsPanel/HealthContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="StaminaContainer" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="StaminaIcon" type="Label" parent="StatsPanel/StaminaContainer"]
layout_mode = 2
text = "‚ö°"

[node name="StaminaBar" type="ProgressBar" parent="StatsPanel/StaminaContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="StatsPanel/StaminaContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="HungerContainer" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="HungerIcon" type="Label" parent="StatsPanel/HungerContainer"]
layout_mode = 2
text = "üçñ"

[node name="HungerBar" type="ProgressBar" parent="StatsPanel/HungerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HungerLabel" type="Label" parent="StatsPanel/HungerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="ThirstContainer" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="ThirstIcon" type="Label" parent="StatsPanel/ThirstContainer"]
layout_mode = 2
text = "üíß"

[node name="ThirstBar" type="ProgressBar" parent="StatsPanel/ThirstContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="ThirstLabel" type="Label" parent="StatsPanel/ThirstContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="SanityContainer" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="SanityIcon" type="Label" parent="StatsPanel/SanityContainer"]
layout_mode = 2
text = "üß†"

[node name="SanityBar" type="ProgressBar" parent="StatsPanel/SanityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="SanityLabel" type="Label" parent="StatsPanel/SanityContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="TempContainer" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="TempIcon" type="Label" parent="StatsPanel/TempContainer"]
layout_mode = 2
text = "üå°"

[node name="TempLabel" type="Label" parent="StatsPanel/TempContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "36.6¬∞C"

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="DebuffPanel" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 190.0
offset_right = 300.0
offset_bottom = 220.0

[node name="InteractPrompt" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
text = "[E] –í–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–æ–≤–∞—Ç—å"
horizontal_alignment = 1
visible = false

[node name="XPNotification" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 35.0
horizontal_alignment = 2
visible = false

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 60.0
text = "–£—Ä–æ–≤–µ–Ω—å: 1"
horizontal_alignment = 2

[node name="JumpIndicator" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -80.0
offset_right = 30.0
offset_bottom = -55.0
text = "‚óè‚óè"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="ControlsHint" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = -10.0
offset_bottom = -10.0
text = "WASD - –î–≤–∏–∂–µ–Ω–∏–µ
Shift - –ë–µ–≥
Ctrl - –ü—Ä–∏—Å–µ—Å—Ç—å
Space - –ü—Ä—ã–∂–æ–∫
E - –í–∑—è—Ç—å
I - –ò–Ω–≤–µ–Ω—Ç–∞—Ä—å
–õ–ö–ú - –ê—Ç–∞–∫–∞"
horizontal_alignment = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
